<resources>
    <string name="app_name" translatable="false">DCTimerAI</string>
    <string name="navigation_drawer_open" translatable="false">Navigation drawer open</string>
    <string name="navigation_drawer_close" translatable="false">Navigation drawer close</string>
    <string name="title_activity_detail">Details</string>
    <string name="title_activity_session">Session manager</string>
    <string name="tab_timer">Timer</string>
    <string name="tab_result">Result</string>
    <string name="tab_session">Session</string>
    <string name="tab_settings">Settings</string>
    <string name="action_import_scramble">Import Scramble</string>
    <string name="action_export_scramble">Export Scramble</string>
    <string name="action_last">Last solve</string>
    <string name="action_session">Sessions</string>
    <string name="action_session_name">Rename session</string>
    <string name="action_clear">Clear session</string>
    <string name="action_delete">Delete</string>
    <string name="action_sort">Sort order</string>
    <string name="action_histogram">Histogram</string>
    <string name="action_graph">Graph</string>
    <string name="action_daily">Daily Stats</string>
    <string name="action_import_export">Import/Export database</string>
    <string name="action_share">Share</string>
    <string name="action_exit">Exit</string>
    <string name="action_stackmat">Stackmat timer</string>
    <string name="action_smartcube">Smart cube</string>
    <string name="action_scramble">Scramble detail</string>
    <string name="scrambling">scrambling…</string>
    <string name="initializing">initializing</string>
    <string name="inspecting">INSPECTING</string>
    <string name="solving">SOLVING</string>
    <string name="time">time</string>
    <string name="no_penalty">No penalty</string>
    <string name="penalty_plus2">"+2"</string>
    <string name="penalty_dnf">DNF</string>
    <string name="comment">"Comment: "</string>
    <string name="session">"Session "</string>
    <string name="option">Options</string>
    <string name="ready">READY</string>
    <string name="session_mean">Session Mean(%1$s</string>
    <string name="show_time">"Time: "</string>
    <string name="session_name">Session name</string>
    <string name="select_session">Select session</string>
    <string name="add_session">Add session</string>
    <string name="default_session">Default session</string>
    <string name="session_clear">Clear</string>
    <string name="num_of_solve">"Number of solves: "</string>
    <string name="connected">Connected</string>
    <string name="not_connected">Not connected</string>
    <string name="connect_fail">Connect failed</string>
    <string name="disconnect">Disconnect</string>
    <string name="status">Status</string>
    <string name="select_device">Select device</string>
    <string name="select_smart_cube">Select smart cube</string>
    <string name="select_smart_timer">Select Bluetooth timer</string>
    <string name="title_timer">TIMER</string>
    <string name="title_smart">SMART</string>
    <string name="title_scramble">SCRAMBLE</string>
    <string name="title_stats">STATISTICS</string>
    <string name="title_tools">TOOLS</string>
    <string name="title_scheme">COLOR SCHEMES</string>
    <string name="scheme_cube">NxNxN</string>
    <string name="scheme_pyrm">Pyraminx</string>
    <string name="scheme_sq">Square-1</string>
    <string name="scheme_skewb">Skewb</string>
    <string name="scheme_reset">Reset</string>
    <string name="title_share">SHARE</string>
    <string name="title_interface">INTERFACE</string>
    <string name="select_color">Select color</string>
    <string name="title_gesture">GESTURE MANAGER</string>
    <string name="title_hardware">HARDWARE</string>
    <string name="title_smart_mode">SMART MODE</string>
    <string name="eight_sec">8 seconds</string>
    <string name="twelve_sec">12 seconds</string>
    <string name="background_color">Background color</string>
    <string name="light_mode">Light</string>
    <string name="dark_mode">Dark</string>
    <string name="smart_cube_orientation_format">%1$s top / %2$s front</string>
    <string name="exit_tip">Press again to exit.</string>
    <string name="copy_success">Copy to clipboard successfully.</string>
    <string name="invalid_input">Invalid input.</string>
    <string name="sr_not_support">"The sampling rate can't work on this device."</string>
    <string name="conning">Connecting to the network…</string>
    <string name="network_error">Network error.</string>
    <string name="lastest_version">This is the latest version.</string>
    <string name="save_success">Save succeeded.</string>
    <string name="save_fail">Save failed.</string>
    <string name="file_not_exist">File not exists.</string>
    <string name="path_not_exist">Path not exists.</string>
    <string name="sdcard_not_exist">SD card not exists.</string>
    <string name="path_illegal">Illegal path.</string>
    <string name="file_error">File error.</string>
    <string name="import_fail">Import database failed.</string>
    <string name="import_success">Import database succeeded.</string>
    <string name="permission_deny">Permission denied</string>
    <string name="ble_location_disabled">Location is turned off. Please enable system location before scanning BLE devices.</string>
    <string name="scan_device">Scanning device…</string>
    <string name="cube_not_connected">" is not connected"</string>
    <string name="ble_not_supported">BLE not supported</string>
    <string name="ble_device_not_supported">This Bluetooth device is not supported yet</string>
    <string name="smart_timer_wca_disabled">Bluetooth timer mode does not support WCA inspection</string>
    <string name="smart_timer_wca_auto_disabled">WCA inspection and inspection alerts were turned off automatically</string>
    <string name="search_hint">Search time or comment</string>
    <string name="delete_fail">Delete result failed.</string>
    <string name="new_session_best">"New session best: "</string>
    <string name="new_average_best">"New average best: "</string>
    <string name="detail_avg">"Detailed statistics: Average of %1$d"</string>
    <string name="detail_mean">"Detailed statistics: Mean of %1$d"</string>
    <string name="detail_session_mean">Detailed statistics: Session Mean</string>
    <string name="stat_title">"Generated by DCTimerAI on "</string>
    <string name="stat_solve">"Cubes Solved: "</string>
    <string name="stat_avg">"Average: "</string>
    <string name="stat_mean">"Mean: "</string>
    <string name="stat_best">"Best Time: "</string>
    <string name="stat_worst">"Worst Time: "</string>
    <string name="stat_best_avg">"Best average of %1$d: "</string>
    <string name="stat_best_mean">"Best mean of %1$d: "</string>
    <string name="stat_list">"Individual Times: "</string>
    <string name="stat_session_avg">"Session Average: "</string>
    <string name="stat_session_mean">"Session Mean: "</string>
    <string name="btn_ok">OK</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_close">Close</string>
    <string name="btn_copy">Copy</string>
    <string name="btn_save">Save</string>
    <string name="btn_upgrade">Check for updates</string>
    <string name="btn_download">Download</string>
    <string name="btn_background">Run in background</string>
    <string name="btn_detail">Details</string>
    <string name="btn_add">Add</string>
    <string name="btn_delete">Close without saving</string>
    <string name="btn_open">Open</string>
    <string name="btn_scan">Scan</string>
    <string name="btn_cube_reset">Reset cube</string>
    <string name="btn_reset_orientation">Reset orientation</string>
    <string name="btn_cube_logo">Center logo</string>
    <string name="btn_refresh">Refresh</string>
    <string name="btn_mark_solve">Mark solved</string>
    <string name="btn_mark_scramble">Mark scrambled</string>
    <string name="btn_solution">Solution</string>
    <string name="btn_clear">Clear</string>
    <string name="btn_done">Done</string>
    <string name="copy_scramble">Copy scramble</string>
    <string name="delete_time">Delete</string>
    <string name="reset_all">Reset All</string>
    <string name="new_version">"New version: "</string>
    <string name="check_update_progress">Checking for updates…</string>
    <string name="check_update_latest">You are using the latest version</string>
    <string name="check_update_failed">Failed to check for updates. Please try again later.</string>
    <string name="update_available_msg">"New version: %1$s"</string>
    <string name="confirm_delete_result">"Delete result: "</string>
    <string name="confirm_delete_last">"Delete last result: "</string>
    <string name="confirm_clear_session">Clear all times in this session?</string>
    <string name="confirm_delete_session">Delete this session?</string>
    <string name="confirm_reset">Are you sure?</string>
    <string name="time_dnf">Time: DNF</string>
    <string name="confirm_save">Save this time?</string>
    <string name="confirm_overwrite">File already exists. Overwrite?</string>
    <string name="smart_cube_reset_done">Cube reset to solved state</string>
    <string name="smart_cube_restore_first">Please restore the cube first</string>
    <string name="smart_cube_wait_connect">Cube not connected</string>
    <string name="smart_cube_logo_title">White center logo</string>
    <string name="smart_cube_logo_none">No logo</string>
    <string name="smart_cube_logo_builtin_ai">Built-in: DCTimerAI</string>
    <string name="smart_cube_logo_builtin_htt">Built-in: Hu Tutu HTT</string>
    <string name="smart_cube_logo_builtin_cube">Built-in: Cube</string>
    <string name="smart_cube_logo_use_custom">Use current custom logo</string>
    <string name="smart_cube_logo_upload_custom">Upload custom logo</string>
    <string name="smart_cube_logo_applied">Center logo updated</string>
    <string name="smart_cube_logo_upload_failed">Unable to load this image</string>
    <string name="smart_cube_auto_orientation_reset_hint">Orientation reset automatically to white top, green front</string>
    <string name="smart_cube_logo_crop_title">Move and scale the logo to fit the white center</string>
    <string name="smart_cube_logo_none_short">NoLogo</string>
    <string name="smart_cube_logo_upload_short">UploadLogo</string>
    <string name="smart_cube_logo_builtin_ai_short">DCTimerAI</string>
    <string name="smart_cube_logo_builtin_htt_short">Hu Tutu</string>
    <string name="smart_cube_logo_builtin_cube_short">Cube</string>
    <string name="smart_cube_logo_custom_slot">Custom %1$d</string>
    <string name="delete_items">Delete selected items?</string>
    <string name="solve_none">None</string>
    <string name="cube2_face">Face</string>
    <string name="cube2_layer">Layer</string>
    <string name="side_u">U (white)</string>
    <string name="side_d">D (yellow)</string>
    <string name="side_l">L (orange)</string>
    <string name="side_r">R (red)</string>
    <string name="side_f">F (green)</string>
    <string name="side_b">B (blue)</string>
    <string name="petrus_s2">Solve Petrus S2</string>
    <string name="roux_s2">Solve Roux S2</string>
    <string name="other_timer_cstimer">CSTimer</string>
    <string name="other_timer_twisty_timer">Twisty Timer</string>
    <string name="other_timer_cstimer_hint">Export - Export to file</string>
    <string name="other_timer_twisty_hint">Sidebar - Export/Import - Export - For other timers</string>
    <string name="other_timer_import_target_new">Create new session</string>
    <string name="other_timer_import_target_append">Append to existing session</string>
    <string name="other_timer_import_target_replace">Replace existing session</string>
    <string name="other_timer_import_new_session_name">New session name</string>
    <string name="other_timer_import_target_session">Target session</string>
</resources>