<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingTop="8dp">

    <LinearLayout
        android:id="@+id/item_cstimer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:orientation="vertical"
        android:paddingLeft="18dp"
        android:paddingTop="14dp"
        android:paddingRight="18dp"
        android:paddingBottom="14dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/other_timer_cstimer"
            android:textColor="@color/colorText"
            android:textSize="16sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/other_timer_cstimer_hint"
            android:textColor="@color/colorGray2"
            android:textSize="12sp" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorGray1" />

    <LinearLayout
        android:id="@+id/item_twisty_timer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:orientation="vertical"
        android:paddingLeft="18dp"
        android:paddingTop="14dp"
        android:paddingRight="18dp"
        android:paddingBottom="14dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/other_timer_twisty_timer"
            android:textColor="@color/colorText"
            android:textSize="16sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/other_timer_twisty_hint"
            android:textColor="@color/colorGray2"
            android:textSize="12sp" />
    </LinearLayout>

</LinearLayout>
