<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorBackground">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="20dp"
        android:paddingTop="18dp"
        android:paddingRight="20dp"
        android:paddingBottom="10dp"
        android:text="@string/smart_cube_logo_crop_title"
        android:textColor="@color/colorText"
        android:textSize="18sp" />

    <com.dctimer.view.SmartCubeLogoCropView
        android:id="@+id/smart_cube_logo_crop_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:orientation="horizontal"
        android:paddingLeft="16dp"
        android:paddingTop="10dp"
        android:paddingRight="16dp"
        android:paddingBottom="16dp">

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/transparent"
            android:text="@string/btn_cancel"
            android:textAllCaps="false"
            android:textColor="@drawable/button_text_style" />

        <Button
            android:id="@+id/btn_done"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:background="@color/transparent"
            android:text="@string/btn_done"
            android:textAllCaps="false"
            android:textColor="@drawable/button_text_style" />
    </LinearLayout>
</LinearLayout>
